# LidarSLAM

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
Superbuild/: CMakeLists.txt  superbuild_import.cmake.in
Superbuild/patches/: gtsam-windows-compatibility.patch
VelodyneHDL/: vtkSlam.cxx
ci/: .gitlab-ci.yml  Dockerfile  README.md
cmake/: Config.cmake.in  create_PCL_target.cmake
paraview_wrapping/: CMakeLists.txt  Slam.xml  vtkSlam.cxx  vtkSlam.h  vtkSlamManager.cxx  vtkSlamManager.h  vtkSpinningSensorKeypointExtractor.cxx  vtkSpinningSensorKeypointExtractor.h
paraview_wrapping/Plugin/: CMakeLists.txt
paraview_wrapping/Plugin/LidarSlamPluginMod/: CMakeLists.txt  vtk.module  vtkSlam.h  vtkSlamManager.cxx  vtkSlamManager.h  vtkSpinningSensorKeypointExtractor.h
paraview_wrapping/Plugin/doc/: How_to_SLAM_with_LidarView.md
paraview_wrapping/Plugin/vtkLidarSlam/: CMakeLists.txt  Slam.xml  vtkSlam.cxx  vtkSlam.h  vtkSlamManager.cxx  vtkSpinningSensorKeypointExtractor.cxx  vtkSpinningSensorKeypointExtractor.h
paraview_wrapping/doc/: How_to_SLAM_with_LidarView.html  How_to_SLAM_with_LidarView.md
ros_wrapping/driver_conversions/: CMakeLists.txt  package.xml
ros_wrapping/driver_conversions/src/: VelodyneToSlamNode.h
ros_wrapping/external_sensors_msg/apriltag_ros/: CMakeLists.txt  package.xml
ros_wrapping/external_sensors_msg/apriltag_ros/msg/: AprilTagDetectionArray.msg
ros_wrapping/gps_conversions/: CMakeLists.txt  package.xml
ros_wrapping/gps_conversions/src/: GpsToUtmNode.cxx  GpsToUtmNode.h  NavSatFixToGpsFixNode.cxx  NavSatFixToGpsFixNode.h  OdomToGpsNode.cxx  OdomToGpsNode.h
ros_wrapping/lidar_conversions/: CMakeLists.txt  README.md  package.xml
ros_wrapping/lidar_conversions/config/: OS1_64_metadata.json
ros_wrapping/lidar_conversions/external_include/: ouster_point.h
ros_wrapping/lidar_conversions/src/: LivoxToLidarNode.cxx  LivoxToLidarNode.h  OusterToLidarNode.cxx  OusterToLidarNode.h  RobosenseToLidarNode.cxx  RobosenseToLidarNode.h  Utilities.h  VelodyneToLidarNode.cxx  VelodyneToLidarNode.h
ros_wrapping/lidar_slam/: CMakeLists.txt  README.md  package.xml
ros_wrapping/lidar_slam/launch/: gps_conversions.launch  slam.launch  slam_gps_optim.launch  slam_livox.launch  slam_ouster.launch  slam_velodyne.launch
ros_wrapping/lidar_slam/msg/: Confidence.msg  SlamCommand.msg
ros_wrapping/lidar_slam/params/: aggregation_config.yaml  pose_graph_optim_config.yaml  slam.rviz  slam_camera.rviz  slam_config.yaml  slam_config_indoor.yaml  slam_config_outdoor.yaml
ros_wrapping/lidar_slam/src/: AggregationNode.cxx  AggregationNode.h  LidarSlamNode.cxx  LidarSlamNode.h  LidarSlamNode_main.cxx  PoseGraphOptimizationNode.cxx  PoseGraphOptimizationNode.h  main.cxx  ros_transform_utils.h
ros_wrapping/lidar_slam/src/driverPc_to_slamPc/: VelodyneToSlamNode.cxx  VelodyneToSlamNode.h
ros_wrapping/lidar_slam/srv/: save_pc.srv
ros_wrapping/slam_visualization/: CMakeLists.txt  package.xml  rviz_plugin.xml
ros_wrapping/slam_visualization/src/: SlamControlPanel.cpp  SlamControlPanel.cxx  SlamControlPanel.h
ros_wrapping/tests/: CMakeLists.txt  README.md  package.xml
ros_wrapping/tests/launch/: slam.launch
ros_wrapping/tests/params/: eval.yaml
ros_wrapping/tests/src/: LidarSlamTestNode.cxx  LidarSlamTestNode.h
slam_lib/: CMakeLists.txt  CeresCostFunctions.h  Config.cmake.in  GlobalTrajectoriesRegistration.cxx  GlobalTrajectoriesRegistration.h  KDTreePCLAdaptor.h  MotionModel.cxx  MotionModel.h  PointCloudStorage.h  PoseGraphOptimization.cxx  PoseGraphOptimization.h  RollingGrid.cxx  RollingGrid.h  Slam.cxx  Slam.h  SpinningSensorKeypointExtractor.cxx  SpinningSensorKeypointExtractor.h  Transform.cxx  Transform.h
slam_lib/include/LidarSlam/: CeresCostFunctions.h  ConfidenceEstimators.h  Enums.h  ExternalSensorManagers.h  GlobalTrajectoriesRegistration.h  InterpolationModels.h  KDTreePCLAdaptor.h  KeypointsMatcher.h  KeypointsRegistration.h  LidarPoint.h  LocalOptimizer.h  MotionModel.h  PointCloudStorage.h  PoseGraphOptimization.h  PoseGraphOptimizer.h  RollingGrid.h  SensorConstraints.h  Slam.h  SpinningSensorKeypointExtractor.h  State.h  Transform.h  Utilities.h  VoxelGrid.h
slam_lib/src/: ConfidenceEstimators.cxx  ExternalSensorManagers.cxx  GlobalTrajectoriesRegistration.cxx  InterpolationModels.cxx  KeypointsMatcher.cxx  KeypointsRegistration.cxx  LocalOptimizer.cxx  MotionModel.cxx  PoseGraphOptimization.cxx  PoseGraphOptimizer.cxx  RollingGrid.cxx  SensorConstraints.cxx  Slam.cxx  SpinningSensorKeypointExtractor.cxx  Transform.cxx  Utilities.cxx  VoxelGrid.cxx
slam_lib/test_folder/: test_model_interpolation.cpp
